fix: don't do unsafe minimizations by default

--- a/test/testData/_locales/en/messages.json
+++ b/test/testData/_locales/en/messages.json
@@ -1,6 +1,11 @@
 {
   "hello": {
-    "message": "Hello!",
-    "description": "Greeting"
+    "message": "Hello $NAME$!",
+    "description": "Greeting",
+    "placeholders": {
+      "NAME": {
+        "content": "$1"
+      }
+    }
   }
 }
